# purchase_predict_api

./: .env  Dockerfile  app.py  cloudbuild.yaml  pyproject.toml
src/: model.py
